# mockgpt

./: README.md  pyproject.toml
src/mockgpt/: app.py
tests/: chat.py
